2009-02-18  Alexander Larsson  <alexl@redhat.com>

	Bug 560564 – Replacing a symlink with its linked file truncates the original file

        * gioenums.h:
	Add G_FILE_CREATE_REPLACE_DESTINATION

        * glocalfileoutputstream.c:
        (handle_overwrite_open):
        (_g_local_file_output_stream_replace):
	Handle G_FILE_CREATE_REPLACE_DESTINATION when overwriting files.

        * gfile.c:
        (file_copy_fallback):
	Pass G_FILE_CREATE_REPLACE_DESTINATION to g_file_replace when copying
	with overwrite.

2009-02-17  Ryan Lortie  <desrt@desrt.ca>

	* gfileinfo.c: unref the destination's attribute matcher before
	overwriting it.

2009-02-17  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.8 ===

2009-02-17  Matthias Clasen  <mclasen@redhat.com>

	* gio.symbols: Add missing exports for new API

	* gdatainputstream.c: Add missing Since: tags.

2009-02-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.7 ===

2009-02-16  Matthias Clasen  <mclasen@redhat.com>

	* gmountoperation.[hc]: Add an "aborted" signal to abort a
	mount operation from the backend side.

	* gvolume.h: Add docs regarding the "aborted" signal.

2009-02-16  Ryan Lortie  <desrt@desrt.ca>

	Bug 505042 – add file attribute for actually used file size in bytes

	* gfileinfo.h: add G_FILE_ATTRIBUTE_STANDARD_ALLOCATED_SIZE define to
	"standard::allocated-size"
	* gfileattribute.c: document
	* glocalfileinfo.c: set the allocated size from st_blocks * 512

2009-02-16  Ryan Lortie  <desrt@desrt.ca>

	Bug 571598 – GAsyncResult with NULL gobject

	* gsimpleasyncresult.c: remove various assertions and add some checks
	to allow for a NULL source_object in GSimpleAsyncResult.

2009-02-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 541225 – Can't compile gio on AIX : duplicate case value in 
	gioerror.c

	* gioerror.c (g_io_error_from_errno): Cope with EEXIST == ENOTEMPTY. 
	Reported by Nicolas Joseph 

2009-02-04  Alexander Larsson  <alexl@redhat.com>
