@@ -1,3 +1,11 @@
+2009-02-19  Alexander Larsson  <alexl@redhat.com>
+
+        Bug 549298 – impossible to copy files with p (pipe) flag
+
+        * gfile.c:
+        (file_copy_fallback):
+	Error out if the source file is a special file
+
 2009-02-18  Alexander Larsson  <alexl@redhat.com>
 
 	Bug 560564 – Replacing a symlink with its linked file truncates the original file
